# eeegp-sqlgen

./: .gitignore  Makefile  README.md  pyproject.toml
eeegp_sqlgen/: cli.py  main.py
